--- a/Crossword/Crossword.html
+++ b/Crossword/Crossword.html
@@ -119,21 +119,118 @@
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 	<script type="text/javascript">
 		const SvgNumber = 'url("data:image/svg+xml,<%3Fxml%20version=\\"1.0\\"%20encoding=\\"utf-8\\"%3F><!DOCTYPE%20svg%20PUBLIC%20\\"-//W3C//DTD%20SVG%201.1//EN\\"%20\\"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\\"><svg%20version=\\"1.1\\"%20xmlns=\\"http://www.w3.org/2000/svg\\"%20xmlns:xlink=\\"http://www.w3.org/1999/xlink\\"%20xmlns:xml=\\"http://www.w3.org/XML/1998/namespace\\"%20width=\\"30\\"%20height=\\"30\\"><g><text%20x=\\"1px\\"%20y=\\"7px\\"%20font-family=\\"Arial\\"%20font-size=\\"8px\\"%20font=\\"Arial\\"%20style=\\"fill:gray;\\">{0}</text></g></svg>")';
-
+		const MaxGridArea = 100000;
+		const MinRows = 5;
+		const MinColumns = 5;
+		
 		$(document).ready(function () {
 			// Set cell bg black if checked
-			$(".grid").find("input[type='checkbox']").click(function () {
+			/*$(".grid").find("input[type='checkbox']").click(function () {
+				console.log("$(this).parent()=" + $(this).parent());
 				$(this).parent().css("background-color", this.checked ? "#000" : "#fff");
 				setBackgrounds();
-			});
+			});*/
 
 			nextStep();
 		});
-
-		function isChecked(chk) {
-			return chk.prop("id") != undefined && chk.prop("checked");
+		
+		function nextStep(step) {
+			//console.log("step=" + step);
+			$("#divError").addClass("hidden");
+			
+			switch (step) {
+				case 1:
+					$("#divStep1").removeClass("hidden");
+					$("#divStep2").addClass("hidden");
+					$("#divStep3").addClass("hidden");
+					$("#divGrid").html("");
+					$("#divGrid").addClass("hidden");
+					break;
+				case 2:
+					$("#divStep1").addClass("hidden");
+					$("#divStep2").removeClass("hidden");
+					$("#divStep1").addClass("hidden");
+					$("#divGrid").removeClass("hidden");
+					buildTable(step);
+					break;
+				case 3:
+					$("#divStep1").addClass("hidden");
+					$("#divStep2").addClass("hidden");
+					$("#divStep3").removeClass("hidden");
+					$("#divGrid").removeClass("hidden");
+					buildTable(step);
+					break;
+				default:
+					nextStep(1);
+					break;
+			}
+		}
+		
+		function validateInput() {
+			var rows = parseInt($("#txtRows").val());
+			var cols = parseInt($("#txtColumns").val());
+			
+			if (rows < MinRows) {
+				displayError("Invalid number of <b>Rows</b>.");
+				return false;
+			} else if (cols < MinColumns) {
+				displayError("Invalid number of <b>Columns</b>.");
+				return false;
+			} else if (rows * cols > MaxGridArea) {
+				displayError("Grid area cannot exceed " + MaxGridArea + ".");
+				return false;
+			}
+			return true;
 		}
 
+		function displayError(msg) {
+			$("#divError").removeClass("hidden");
+			$("#spnError").html(msg);
+		}
+		
+		function buildTable(step) {
+			try {
+				var rows = parseInt($("#txtRows").val());
+				var cols = parseInt($("#txtColumns").val());
+				var cellCount = 0;
+				var gridNumber = 0;
+				var tbl = $(document.createElement("table")).appendTo("#divGrid");
+				tbl.prop("id", "tblGrid");
+				tbl.prop("class", "grid");
+				
+				for (var r = 0; r < rows; r++) {
+					var tr = $(document.createElement("tr")).appendTo(tbl);
+					tr.prop("id", "Row_" + r);
+					for (var c = 0; c < cols; c++) {
+						cellCount++;
+						var td = $(document.createElement("td")).appendTo(tr);
+						td.prop("id", "Cell_" + r + "_" + c);
+						td.prop("class", "cell");
+						if (step == 2) {
+							var chk = $(document.createElement("input")).appendTo(td);
+							chk.prop("id", "Chk_" + r + "_" + c);
+							chk.prop("type", "checkbox");
+							chk.click(function () {
+								cellCheck(this);
+							});
+						} else if (step == 3) {
+							var txt = $(document.createElement("input")).appendTo(td);
+							txt.prop("id", "Text_" + r + "_" + c);
+							txt.prop("type", "text");
+						}
+					}
+				}
+				setBackgrounds();
+			} catch (e) {
+				console.warn("Exception raised in buildTable()\n" + e);
+			}
+		}
+		
+		function cellCheck(chk) {
+			$(chk).parent("td").css("background-color", chk.checked ? "#000" : "#fff");
+			setBackgrounds();
+		}
+		
 		function setBackgrounds() {
 			try {
 				var number = 0;
@@ -171,40 +268,9 @@
 				console.warn("Exception raised in setBackgrounds()\n" + e);
 			}
 		}
-
-		function nextStep(step) {
-			//console.log("step=" + step);
-			
-			switch (step) {
-				case 1:
-					$("#divStep1").removeClass("hidden");
-					$("#divStep2").addClass("hidden");
-					$("#divStep3").addClass("hidden");
-					$("#divGrid").addClass("hidden");
-					break;
-				case 2:
-					$("#divStep1").addClass("hidden");
-					$("#divStep2").removeClass("hidden");
-					$("#divStep1").addClass("hidden");
-					$("#divGrid").removeClass("hidden");
-					buildTable();
-					break;
-				case 3:
-					$("#divStep1").addClass("hidden");
-					$("#divStep2").addClass("hidden");
-					$("#divStep3").removeClass("hidden");
-					$("#divGrid").removeClass("hidden");
-					buildTable();
-					break;
-				default:
-					nextStep(1);
-					break;
-			}
-		}
-
-		function buildTable() {
-			var html = "<table><tr><td>cell1</td></tr></table>";
-			$("#tblGrid").html(html);
+		
+		function isChecked(chk) {
+			return chk.prop("id") != undefined && chk.prop("checked");
 		}
 	</script>
 </head>
@@ -257,9 +323,7 @@
 	</div>
 
 	<!-- Grid -->
-	<div id="divGrid" class="hidden">
-		<div id="tblGrid" class="grid"></div>
-	</div>
+	<div id="divGrid" class="hidden"></div>
 
 	<!-- Step 3 -->
 	<div id="divStep3" class="hidden" style="padding-top: 20px;">
@@ -267,8 +331,8 @@
 	</div>
 
 	<!-- Error -->
-	<div id="pnlError" class="hidden" style="width: 100%">
-		<asp:Label ID="lblError" runat="server" ForeColor="Crimson"></asp:Label>
+	<div id="divError" class="hidden" style="width: 100%">
+		<span id="spnError" style="color: Crimson"></span>
 	</div>
 </body>
 </html>
